# Two-Sided-Sequent-Systems-and-Truth-Trees

./: .clang-format  .gitignore  CMakeLists.txt  LogicExpressionTests.cpp  LogicFinalProject.pptx  README.md  SequentSystemsAndTruthTrees.tex  TreeAndConversionTests.cpp
include/: BinaryLogicExpression.hpp  BinarySequentNode.hpp  BinaryTreeNode.hpp  ClosedTreeNode.hpp  Concepts.hpp  LeafLogicExpression.hpp  LeafTreeNode.hpp  LogicExpression.hpp  LogicalAnd.hpp  LogicalAtom.hpp  LogicalConditional.hpp  LogicalContradiction.hpp  LogicalNot.hpp  LogicalOr.hpp  OpenTreeNode.hpp  RecursiveCast.hpp  SequentConverter.hpp  SequentNode.hpp  SequentVisitor.hpp  TreeNode.hpp  TreeSerializer.hpp  TreeVisitor.hpp  UnaryLogicExpression.hpp  UnarySequentNode.hpp  UnaryTreeNode.hpp
src/: BinarySequentNode.cpp  BinaryTreeNode.cpp  ClosedTreeNode.cpp  LogicExpression.cpp  LogicalAnd.cpp  LogicalAtom.cpp  LogicalConditional.cpp  LogicalContradiction.cpp  LogicalNot.cpp  LogicalOr.cpp  OpenTreeNode.cpp  SequentConverter.cpp  SequentNode.cpp  TreeNode.cpp  TreeSerializer.cpp  UnaryLogicExpression.cpp  UnarySequentNode.cpp  UnaryTreeNode.cpp  main.cpp
tests/: LogicExpressionTests.cpp  LogicalAtomTests.cpp  SequentNodeTests.cpp  TreeAndConversionTests.cpp  TreeNodeTests.cpp  TreeSerializerTests.cpp
